--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-hook-form": "^7.52.1",
     "react-router-dom": "^6.25.1",
     "react-scripts": "5.0.1",
+    "react-slider": "^2.0.6",
     "sonner": "^1.5.0",
     "tailwind-merge": "^2.4.0",
     "tailwindcss-animate": "^1.0.7",
@@ -62,6 +63,7 @@
     ]
   },
   "devDependencies": {
+    "@types/react-slider": "^1.3.6",
     "tailwindcss": "^3.4.7"
   }
 }
