--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@types/node": "^16.18.104",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
+    "axios": "^1.7.3",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
@@ -30,12 +31,14 @@
     "react-hook-form": "^7.52.1",
     "react-router-dom": "^6.25.1",
     "react-scripts": "5.0.1",
+    "react-slider": "^2.0.6",
     "sonner": "^1.5.0",
     "tailwind-merge": "^2.4.0",
     "tailwindcss-animate": "^1.0.7",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4",
-    "zod": "^3.23.8"
+    "zod": "^3.23.8",
+    "zustand": "^4.5.4"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -62,6 +65,7 @@
     ]
   },
   "devDependencies": {
+    "@types/react-slider": "^1.3.6",
     "tailwindcss": "^3.4.7"
   }
 }
