--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
     "date-fns": "^3.6.0",
+    "js-cookie": "^3.0.5",
     "lucide-react": "^0.417.0",
     "radix-ui": "^1.0.1",
     "react": "^18.3.1",
@@ -65,6 +66,7 @@
     ]
   },
   "devDependencies": {
+    "@types/js-cookie": "^3.0.6",
     "@types/react-slider": "^1.3.6",
     "tailwindcss": "^3.4.7"
   }
